--- a/GWFish/detectors.yaml
+++ b/GWFish/detectors.yaml
@@ -12,6 +12,7 @@ ET:
             spacing:          geometric
             df:               1./16.
             npoints:          1000
+            arm_length:       10000
 VOY:
             lat:              46.5 * np.pi / 180.
             lon:              -119.4 * np.pi / 180.
@@ -25,7 +26,8 @@ VOY:
             fmax:             1024
             spacing:          geometric 
             df:               1./4.    
-            npoints:          5000           
+            npoints:          5000
+            arm_length:       4000
 CE1:
             lat:              46.5 * np.pi / 180.
             lon:              -119.4 * np.pi / 180.
@@ -39,7 +41,9 @@ CE1:
             fmax:             1024
             spacing:          geometric 
             df:               1./4.    
-            npoints:          5000 
+            npoints:          5000
+            arm_length:       20000
+            
 CE2:
             lat:              46.5 * np.pi / 180.
             lon:              -119.4 * np.pi / 180.
@@ -53,7 +57,8 @@ CE2:
             fmax:             1024
             spacing:          geometric 
             df:               1./4.    
-            npoints:          5000 
+            npoints:          5000
+            arm_length:       40000
 LLO:
             lat:              30.56 * np.pi / 180.
             lon:              -90.77 * np.pi / 180.
@@ -67,7 +72,8 @@ LLO:
             fmax:             1024
             spacing:          geometric 
             df:               1./4.    
-            npoints:          5000    
+            npoints:          5000
+            arm_length:       4000
 LHO:
             lat:              46.46 * np.pi / 180.
             lon:              -119.4 * np.pi / 180.
@@ -81,7 +87,8 @@ LHO:
             fmax:             1024
             spacing:          geometric 
             df:               1./4.    
-            npoints:          5000 
+            npoints:          5000
+            arm_length:       4000
 LLO_O1:
             lat:              30.56 * np.pi / 180.
             lon:              -90.77 * np.pi / 180.
@@ -95,7 +102,8 @@ LLO_O1:
             fmax:             512
             spacing:          geometric 
             df:               1./4.    
-            npoints:          5000  
+            npoints:          5000
+            arm_length:       4000
 LHO_O1:
             lat:              46.46 * np.pi / 180.
             lon:              -119.4 * np.pi / 180.
@@ -109,7 +117,8 @@ LHO_O1:
             fmax:             512
             spacing:          geometric 
             df:               1./4.    
-            npoints:          5000 
+            npoints:          5000
+            arm_length:       4000
 VIR:
             lat:              43.6 * np.pi / 180.
             lon:              10.5 * np.pi / 180.
@@ -123,7 +132,8 @@ VIR:
             fmax:             1024
             spacing:          geometric 
             df:               1./4.    
-            npoints:          5000 
+            npoints:          5000
+            arm_length:       3000
 VIR_O2:
             lat:              43.6 * np.pi / 180.
             lon:              10.5 * np.pi / 180.
@@ -137,7 +147,8 @@ VIR_O2:
             fmax:             1024
             spacing:          geometric 
             df:               1./4.
-            npoints:          5000 
+            npoints:          5000
+            arm_length:       3000
 KAG:
             lat:              36.41 * np.pi / 180.
             lon:              137.3 * np.pi / 180.
@@ -151,7 +162,8 @@ KAG:
             fmax:             1024
             spacing:          geometric 
             df:               1./4.    
-            npoints:          5000 
+            npoints:          5000
+            arm_length:       3000
 LIN:
             lat:              19.61 * np.pi / 180.
             lon:              77.03 * np.pi / 180.
@@ -165,7 +177,8 @@ LIN:
             fmax:             1024
             spacing:          geometric 
             df:               1./4.    
-            npoints:          5000     
+            npoints:          5000
+            arm_length:       4000
 LISA:
 # the ACC and OMS Doppler-noise PSDs are taken from https://arxiv.org/abs/2108.01167
             arm_length:       2.5e9
